infrastructure/base/layer1/oauth2-proxy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`oauth.cluster.arpa`)
      kind: Rule
      services:
        - name: oauth2-proxy
          port: http
  tls:
    secretName: traefik-tls
